create a mail function to get token

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 PORT = 
 DB_URL =
 
+#BCYPT
+SALT_ROUND=
 
 #OTP
-
 OTP_SECRET=
-OTP_DURATION
+OTP_DURATION= 
+
+# GMAIL&PASS
+GMAIL_USER=''
+GMAIL_PASS=''
