--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
-PORT = 
-DB_URL =
+FRONTEND_URL=
+PORT= 
+DB_URL=
 
 #BCYPT
 SALT_ROUND=
@@ -15,3 +16,6 @@ GMAIL_PASS=''
 #JWT
 JWT_SECRET=
 JWT_DURATION=
+
+#STRIPE
+SECRET_KEY=
