--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^2.1.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.3.0",
     "number-formatter": "^1.2.0",
     "react": "^18.2.0",
