--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://asimneupane.github.io/GadgetHub",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy"
+    
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
