--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "http://asimneupane.github.io/GadgetHub",
+  "homepage": "http://asimneupane.github.io/gadgethub",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
