--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
@@ -21,6 +20,7 @@
     "bootstrap": "^5.3.2",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.3.0",
+    "moment": "^2.29.4",
     "number-formatter": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
