--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.7",
+    "aws-sdk": "^2.1515.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^3.1.2",
