--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "client",
   "private": true,
-  "homepage": "http://asimneupane.github.io/gadgethub",
-  "version": "0.1.0",
+  "homepage": "https://github.com/ASIMNEUPANE/gadgethub",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
