--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "private": true,
-  "homepage": "https://github.com/ASIMNEUPANE/gadgethub",
+  "homepage": "http://asimneupane.github.io/gadgethub",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
