--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,14 @@
 {
   "name": "client",
   "private": true,
-  "homepage": "https://asimneupane.github.io/gadgethub",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
+   
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
